--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
     "font-awesome": "^4.7.0",
     "graphql": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mongodb": "^3.2.7"
   }
